--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.87.3",
     "thunk": "^0.0.1"
