--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "es6-promise": "^4.2.8",
+    "eslint-plugin-react": "^7.16.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
