--- a/package.json
+++ b/package.json
@@ -1,47 +1,48 @@
 {
-  "name": "favorite_quotes_client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "es6-promise": "^4.2.8",
-    "eslint-plugin-react": "^7.16.0",
-    "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.17.15",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.10",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "redux": "^4.0.4",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.87.3",
-    "thunk": "^0.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "react-card-flip": "^0.8.1"
-  }
+	"name": "favorite_quotes_client",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"bootstrap": "^4.3.1",
+		"concurrently": "^5.0.0",
+		"es6-promise": "^4.2.8",
+		"eslint-plugin-react": "^7.16.0",
+		"isomorphic-fetch": "^2.2.1",
+		"lodash": "^4.17.15",
+		"react": "^16.8.6",
+		"react-bootstrap": "^1.0.0-beta.10",
+		"react-dom": "^16.8.6",
+		"react-redux": "^7.1.0",
+		"react-router-dom": "^5.0.1",
+		"react-scripts": "3.0.1",
+		"redux": "^4.0.4",
+		"redux-logger": "^3.0.6",
+		"redux-thunk": "^2.3.0",
+		"semantic-ui-react": "^0.87.3",
+		"thunk": "^0.0.1"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"react-card-flip": "^0.8.1"
+	}
 }
